[project]
name = "rss"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "Shuhua", email = "shuhua_gao@u.nus.edu" }
]
dependencies = [
    "numpy>=1.25.1",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
